snapshots/care/data4life/hc-result-sdk-kmp/error/maven-metadata.xml.sha512
5fdb344e71dbe4cc582cb8c82472501e162364aa65776ec0d8535aa4408ae78d7c21156aaf00bf03305f557a84f15db61f00daa1cd6f6dcdda37c9d4f7ac0883